<resources>
    <string name="app_name">Movie App</string>
    <string name="home">Home</string>
    <string name="play">Play</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discovery">Discovery</string>
    <string name="searchbar_hint">Search...</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="don_t_have_account_register">Don’t have account ? Register</string>
    <string name="fullname">FullName</string>
</resources>