<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:paddingHorizontal="20dp"
    tools:context=".ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtLogin"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:background="@drawable/edt_border_style"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="5dp"
                android:hint="@string/email"
                android:textColorHint="#827676"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginVertical="10dp"
                android:inputType="textEmailAddress" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginVertical="10dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edt_border_style"
                android:ems="10"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:hint="@string/password"
                android:textColorHint="#827676"
                android:drawablePadding="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:drawableStart="@drawable/baseline_lock_24"
                android:paddingEnd="40dp"
                android:inputType="textPassword" />
            <ImageView
                android:id="@+id/btnShowPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_remove_red_eye_24"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="10dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/txtForgetPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="end"
            android:text="@string/forget_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />
        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/don_t_have_account_register" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>